fixed padding and margin for chart

--- a/css/styles.css
+++ b/css/styles.css
@@ -319,8 +319,10 @@ text-decoration: none;
 }
 
 canvas {
-    padding-right: 15px;
-    padding-bottom: 15px;
+    /* padding-right: 15px;
+    padding-bottom: 15px; */
+    padding: 0 10px 15px;
+    margin: 0 auto;
 }
 
 
